statum-macros/tests/ui/invalid_state_empty_enum.stderr
error: #[state] enums must have at least one variant.
 --> tests/ui/invalid_state_empty_enum.rs:4:1
  |
4 | #[state]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `state` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/invalid_state_empty_enum.rs:5:19
  |
5 | enum EmptyState {}
  |                   ^ consider adding a `main` function to `$DIR/tests/ui/invalid_state_empty_enum.rs`
