statum-macros/tests/ui/invalid_state_empty_enum.rs
#![allow(unused_imports)]
use statum_macros::state;

#[state]
enum EmptyState {}